--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "author": "Vaibhav Mittal",
   "license": "MIT",
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "moment": "^2.22.2",
     "react": "^16.3.2",
     "react-dates": "^17.0.0",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.0-rc.3",
+    "react-table": "^6.8.6",
     "react-widgets": "^4.3.2",
     "react-widgets-moment": "^4.0.15",
     "react-with-styles": "^3.2.0",
